# Blame_bot

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  performance.rs  scanner.rs  security.rs  system.rs
src/components/AuditReport/: AuditReport.tsx
src/components/CodeSearch/: CodeSearch.tsx
src/components/CommandBar/: CommandBar.tsx
src/components/Dashboard/: AIChat.tsx  Dashboard.tsx  FileContextBar.tsx  ProjectSidebar.tsx  ResultsPanel.tsx
src/components/Editor/: ActivityBar.tsx  BreadcrumbBar.tsx  EditorTabBar.tsx  FileExplorer.tsx  MenuBar.tsx  MonacoPane.tsx  StatusBar.tsx  TerminalPanel.tsx
src/components/Extensions/: ExtensionsPanel.tsx
src/components/Settings/: Settings.tsx
src/components/ui/: components.tsx  index.ts
src/data/: extensions.ts
src/hooks/: useAudit.ts  useOllama.ts  useScanner.ts
src/services/: autoFixService.ts  codeEditService.ts  indexingService.ts  ollamaService.ts  tauriService.ts
src/store/: appStore.ts  extensionStore.ts
src/styles/: globals.css
src/types/: extensions.ts  index.ts
